--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "node-sass": "^4.14.1",
+    "polished": "^3.6.4",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-markdown": "^4.3.1"
+    "react-markdown": "^4.3.1",
+    "styled-components": "^5.1.1",
+    "styled-components-modifiers": "^1.2.5"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
+    "@storybook/addon-docs": "^5.3.19",
     "@storybook/addon-info": "^5.3.18",
     "@storybook/addons": "^5.3.18",
     "@storybook/react": "^5.3.18",
@@ -34,6 +38,7 @@
     "postcss-loader": "^3.0.0",
     "prettier": "^2.0.5",
     "raw-loader": "^4.0.1",
+    "react-is": "^16.13.1",
     "resolve-url-loader": "^3.1.1",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1"
@@ -55,5 +60,8 @@
     "*.{json}": [
       "prettier --write"
     ]
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
