--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@storybook/addon-backgrounds": "^5.3.19",
+    "@storybook/addon-contexts": "^5.3.19",
     "classnames": "^2.2.6",
     "node-sass": "^4.14.1",
     "polished": "^3.6.4",
